--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    Estos cambios se hiceron para probar el push
+    Estos cambios se hiceron para probar el push (segunda parte)
 </body>
 </html>
